--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-
-gunicorn
-flask
-numpy
-https://download.pytorch.org/whl/cpu/torch-1.1.0-cp36-cp36m-linux_x86_64.whl
-torchvision
+https://download.pytorch.org/whl/cpu/torch-1.5.1%2Bcpu-cp36-cp36m-linux_x86_64.whl
+https://download.pytorch.org/whl/cpu/torchvision-0.6.1%2Bcpu-cp36-cp36m-linux_x86_64.whl
 fastai
-jupyter
+voila
+ipywidgets
+
+
